Add "dedup" deduplication search filter, tweaks, high quality mode
