# main.go
@@ -386,6 +386,9 @@ func (*Api) PostScenes(w http.ResponseWriter, r *http.Request) {
 
 	sceneConfig.Layout.ViewportWidth = float64(data.ViewportWidth)
 	sceneConfig.Layout.ViewportHeight = float64(data.ViewportHeight)
+	if data.Tweaks != nil {
+		sceneConfig.Layout.Tweaks = string(*data.Tweaks)
+	}
 	sceneConfig.Layout.ImageHeight = 0
 	if data.ImageHeight != nil {
 		sceneConfig.Layout.ImageHeight = float64(*data.ImageHeight)
@@ -436,6 +439,9 @@ func (*Api) GetScenes(w http.ResponseWriter, r *http.Request, params openapi.Get
 	}
 	if params.Search != nil {
 		sceneConfig.Scene.Search = string(*params.Search)
+	}
+	if params.Tweaks != nil {
+		sceneConfig.Layout.Tweaks = string(*params.Tweaks)
 	}
 	collection := getCollectionById(string(params.CollectionId))
 	if collection == nil {
@@ -739,6 +745,14 @@ func GetScenesSceneIdTilesImpl(w http.ResponseWriter, r *http.Request, sceneId o
 	if params.DebugThumbnails != nil {
 		rn.DebugThumbnails = *params.DebugThumbnails
 	}
+	if params.QualityPreset != nil {
+		switch *params.QualityPreset {
+		case "HIGH":
+			rn.QualityPreset = render.QualityPresetHigh
+		default:
+			rn.QualityPreset = render.QualityPresetFast
+		}
+	}
 
 	zoom := params.Zoom
 	x := int(params.X)
@@ -783,7 +797,11 @@ func GetScenesSceneIdTilesImpl(w http.ResponseWriter, r *http.Request, sceneId o
 		return
 	}
 	w.Header().Add("Content-Type", "image/jpeg")
-	codec.EncodeJpeg(w, img)
+	quality := 80
+	if rn.QualityPreset == render.QualityPresetHigh {
+		quality = 100
+	}
+	codec.EncodeJpeg(w, img, quality)
 }
 
 func (*Api) GetScenesSceneIdDates(w http.ResponseWriter, r *http.Request, sceneId openapi.SceneId, params openapi.GetScenesSceneIdDatesParams) {
